kubernetes/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlforge-model-serving
  namespace: mlforge
spec:
  selector:
    app: mlforge-model-serving
  ports:
    - port: 8000
      targetPort: 8000
